<resources>
    <string name="app_name">ZzamPhong</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="string_button_input_cash_date">날짜선택</string>
    <string name="string_textview_input_cash_amount">금액</string>
    <string name="string_textview_input_cash_etc">비고</string>
    <string name="string_button_input_cash_save">저장</string>


    <string name="string_button_output_cash_date">날짜선택</string>
    <string name="string_textview_output_cash_amount">금액</string>
    <string name="string_textview_output_cash_etc">비고</string>
    <string name="string_button_output_cash_save">저장</string>


    <string name="string_textview_view_input_amount">1.입금 내역</string>
    <string name="string_textview_view_output_amount">2.지출 내역</string>

    <string name="alert_dialog_title">년/월을 선택하세요.</string>

    <string name="positive_button_text">확인</string>

    <string name="negative_button_text">취소</string>



</resources>
