<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zzamphong.slfood.zzamphong.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_textview_view_input_amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.074" />
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_input_cash_date_main"
            android:text="@string/string_button_input_cash_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintVertical_bias="0.11" />


        <EditText
            android:id="@+id/edittext_input_cash_date_main"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:editable="false"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_main_input_cash_search"
            android:text="검색"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintVertical_bias="0.11" />

        </LinearLayout>

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@android:style/Widget.Material.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:scrollbarStyle="insideOverlay"
            android:visibility="visible">

            <TableLayout
                android:id="@+id/tableLayout_input_cash"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:stretchColumns="0,1"></TableLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_textview_view_output_amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.443" />

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_main_ouput_date"
                android:text="@string/string_button_input_cash_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintVertical_bias="0.11" />


            <EditText
                android:id="@+id/edittext_main_output_cash_date"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:editable="false"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.727"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.108" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_main_output_cash_search"
                android:text="검색"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintVertical_bias="0.11" />

        </LinearLayout>


        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@android:style/Widget.Material.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scrollbarStyle="insideOverlay"
            android:visibility="visible"
            android:layout_weight="0.08">

        <TableLayout
            android:id="@+id/tableLayout_output_cash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1"
            android:layout_weight="0.43">
        </TableLayout>
        </ScrollView>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
